--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -1,3 +1,3 @@
 #File properties
-file.baseDirectory=D://users/
+file.baseDirectory=I://users/
 file.visibleTypes=doc, docx, ppt, pptx, xls, xlsx, ppt, pptx, pdf, txt, jpg, jpeg, png, bmp
